--- a/styles/globals.css
+++ b/styles/globals.css
@@ -575,7 +575,7 @@ span.text-red {
 }
 .success,
 .cancel {
-	width: 1000px;
+	max-width: 1000px;
 	margin: auto;
 	margin-top: 160px;
 	background-color: #dcdcdc;
@@ -602,6 +602,7 @@ span.text-red {
 	font-size: 16px;
 	font-weight: 600;
 	text-align: center;
+	color: green;
 }
 .cancel p {
 	font-size: 20px;
@@ -613,6 +614,13 @@ span.text-red {
 	text-align: center;
 	margin: 10px;
 	margin-top: 30px;
+}
+.success .btn-wrapper {
+	display: flex;
+	justify-content: center;
+}
+.success .btn {
+	padding: 10px 25px;
 }
 .success .description .email {
 	margin-left: 5px;
